# libpurple

./: README.md  account.c  config.h  connection.c  connection.h  core.c  core.h  meson.build  meson.build.bak  purplecoreuiops.h  purpleenums.c  purpleenums.h  purpleprivate.h  purpleprotocol.c  purpleprotocol.h  purpleui.c  purpleui.h  version.h
lizard/: exampleappwin.c  gtkaccount.c  gtkaccount.h  hello_2.c  liblizard.c  lizard.c  lizard_ui.c  lizard_ui.h  lizardaccountmanager.c  lizardaccountmanager.h  lizardapplication.c  lizardapplication.h  lizardcore.h  main.c  meson.build  resources.c  window.ui
pidgin/: meson.build  package_revision.h  pidginapplication.c
pidgin/plugins/: meson.build
plugins/kwallet/: purplekwallet.cpp
protocols/ircv3/: purpleircv3connection.c  purpleircv3connection.h  purpleircv3messagehandlers.c  purpleircv3protocol.c
protocols/jabber/: bosh.c  iq.c  jabber.c
protocols/sametime/: sametime.c
subprojects/gplugin/: .hgtags  ChangeLog  convey.yml  meson.build  meson_options.txt
subprojects/gplugin/.hg/: dirstate
subprojects/gplugin/gplugin-gtk3/: gplugin-gtk-plugin-info.c  gplugin-gtk3.xml.in  meson.build
subprojects/gplugin/gplugin-gtk3-viewer/: gplugin-gtk-viewer.c
subprojects/gplugin/gplugin-gtk4/: gplugin-gtk-plugin-row.c  gplugin-gtk-plugin-row.h  gplugin-gtk-view.c  gplugin-gtk-view.h  meson.build
subprojects/gplugin/gplugin-gtk4-viewer/: gplugin-gtk-viewer.c  meson.build
subprojects/talkatu/: ChangeLog  RELEASE.md  meson.build
subprojects/talkatu/talkatu/reference/: meson.build
tests/: meson.build  test_world.c
(+102 files in other folders)
