executable('LoungeLizard',
  'exampleapp.c', 'exampleappwin.c', 'main.c', 'resources.c',
  dependencies: [libpurple_dep, glib, gplugin_dep, gplugin_gtk_dep])

executable('hello_2',
  'hello_2.c','lizard_ui.c',
  dependencies: [libpurple_dep, glib, gplugin_dep, gplugin_gtk_dep])

#executable('lizard',
#  'lizard.c','liblizard.c', 'lizardapplication.c',
#  dependencies: [libpurple_dep, glib, gplugin_dep, gplugin_gtk_dep, gdk_pixbuf, gstreamer, gio, libadwaita])
  